--- a/DresscodeHOME.html
+++ b/DresscodeHOME.html
@@ -1,17 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME - DRESS CODE: metaGLAM</title>
-    <link rel="stylesheet" href="s1.css">
+    <link rel="stylesheet" href="css-files/Styles1.css">
 </head>
 <body>
 
 <main class="main">
     <header>
         <div class="wrapper">
-            <img id="logo" src="logo-white2.png" alt="Logo: ME AN">
+            <img id="logo" src="img/logo-white2.png" alt="Logo: ME AN">
             <nav>
                 <ul>
                     <li><a href="DresscodeHOME.html" target="_blank">Home</a></li>
@@ -25,7 +25,7 @@
         <div class="home-content">
             <h1>DRESS CODE:</h1>
             <h2>metaGLAM</h2>
-            <img src="img.png" height="700" alt="An image of model staring your eyes">
+            <img src="img/img.png" height="700" alt="An image of model staring your eyes">
             <p class="intro">Discover the Future of Fashion in the Metaverse!</p>
             <p>Are you ready to embrace the hottest trend in fashion? The metaverse is where high-tech meets high style,
                 and it's waiting for YOU to join the revolution!
