--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DRESS CODE: metaGLAM</title>
-    <link rel="stylesheet" href="test11.css">
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="css-files/Style3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&amp;display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
 <header>
     <div class="wrapper">
-        <img id="logo" src="logo-white2.png" alt="Logo: ME AN">
+        <img id="logo" src="img/logo-white2.png" alt="Logo: ME AN">
         <nav>
             <ul>
                 <li><a href="DresscodeHOME.html" target="_blank">Home</a></li>
@@ -31,7 +31,7 @@
     <div class="contact-box">
         <div class="contact-left">
             <h3>Map</h3>
-            <img src="map2.png" alt="Location of the company">
+            <img src="img/map2.png" alt="Location of the company">
         </div>
         <div class="contact-right">
             <h3>Reach Us</h3>
