--- a/DresscodeHOME.html
+++ b/DresscodeHOME.html
@@ -25,7 +25,7 @@
         <div class="home-content">
             <h1>DRESS CODE:</h1>
             <h2>metaGLAM</h2>
-            <img src="img.png" height="700" alt="An image of model staring your eyes">
+            <img src="img/img.png" height="700" alt="An image of model staring your eyes">
             <p class="intro">Discover the Future of Fashion in the Metaverse!</p>
             <p>Are you ready to embrace the hottest trend in fashion? The metaverse is where high-tech meets high style,
                 and it's waiting for YOU to join the revolution!
