--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <div class="contact-box">
         <div class="contact-left">
             <h3>Map</h3>
-            <img src="map2.png" alt="Location of the company">
+            <img src="img/map2.png" alt="Location of the company">
         </div>
         <div class="contact-right">
             <h3>Reach Us</h3>
