--- a/product.html
+++ b/product.html
@@ -25,36 +25,36 @@
 <main>
     <div class="intro">
         <h1>Best Sellers</h1>
-        <img src="Karina2.png" alt="Model: Karina from kpop girl group band aespa" height="450">
+        <img src="img/Karina2.png" alt="Model: Karina from kpop girl group band aespa" height="450">
     </div>
     <section class="product-list">
         <h2>Best Selling Products</h2>
         <article class="product">
             <h3>NEXUS Collection Two-Toned Cargo Pants</h3>
-            <img src="cargo.jpg" alt="NEXUS Collection Two-Toned Cargo Pants">
+            <img src="img/cargo.jpg" alt="NEXUS Collection Two-Toned Cargo Pants">
             <section class="product-rating">
                 <h4>4,5/5 (898 reviews)</h4>
-                <img src="half.png" alt="Four and a half star review">
+                <img src="img/half.png" alt="Four and a half star review">
                 <p>"As a satisfied customer, I can confidently say that pants offer both style and roomy comfort, making
                     them my top choice for everyday wear."</p>
             </section>
         </article>
         <article class="product">
             <h3>ScarletSpecs rx-441</h3>
-            <img src="glasses.jpg" alt="ScarletSpecs rx-441 Red Laser Glasses">
+            <img src="img/glasses.jpg" alt="ScarletSpecs rx-441 Red Laser Glasses">
             <section class="product-rating">
                 <h4>4/5 (210 reviews)</h4>
-                <img src="four.png" alt="Four star review">
+                <img src="img/four.png" alt="Four star review">
                 <p>"These glasses not only look amazing but offer a captivating and immersive experience that has
                     exceeded my expectations!"</p>
             </section>
         </article>
         <article class="product">
             <h3>Relaxed Fit Lucid Layer Denim Jacket</h3>
-            <img src="denim.jpg" alt="Transparent Denim Jacket">
+            <img src="img/denim.jpg" alt="Transparent Denim Jacket">
             <section class="product-rating">
                 <h4>4,8/5 (612 reviews)</h4>
-                <img src="almostfive.png" alt="Four point eight star review">
+                <img src="img/almostfive.png" alt="Four point eight star review">
                 <p>"I am loving my see-through denim jacket! It adds an edgy twist to my outfits, and I get compliments
                     every time I wear it. Highly recommended!"</p>
             </section>
