--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This page allows you to contact us if you have any questions or feedbacks.">
     <title>Contact Us</title>
     <link rel="stylesheet" href="Style3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +13,7 @@
 <body>
 <header>
     <div class="wrapper">
-        <img id="logo" src="logo-white2.png" alt="Logo: ME AN">
+        <img id="logo" src="logo-white2.png" alt="Logo: ME AN" height="150" width="150">
         <nav>
             <ul>
                 <li><a href="DresscodeHOME.html" target="_blank">Home</a></li>
@@ -22,7 +23,7 @@
         </nav>
     </div>
     <div class="container">
-        <h1>Connect with us</h1>
+        <h1>Contact Us</h1>
         <p>Thank you for visiting DressCode: MetaGlam. We are dedicated to providing you with a seamless shopping
             experience, and we're here to assist you with any questions or issues you may have. If you encounter any
             problems while shopping or have inquiries about our products, our team is readily available to help.
@@ -30,11 +31,11 @@
     </div>
     <div class="contact-box">
         <div class="contact-left">
-            <h3>Map</h3>
-            <img src="map2.png" alt="Location of the company">
+            <h2>Map</h2> 
+            <img src="map2.webp" alt="Location of the company" height="268" width="417">
         </div>
         <div class="contact-right">
-            <h3>Reach Us</h3>
+            <h2>Reach Us</h2> 
 
             <table>
                 <tr>
@@ -64,7 +65,7 @@
     </div>
 </header>
 <footer>
-        <p>&copy; 2023 DRESS CODE: metaGLAM</p>
-    </footer>
+    <p>&copy; 2023 DRESS CODE: metaGLAM</p>
+</footer>
 </body>
 </html>
