--- a/DresscodeHOME.html
+++ b/DresscodeHOME.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a home page taht introduces the user to our unique online shopping page with the newest trending fashion.">
     <title>HOME - DRESS CODE: metaGLAM</title>
     <link rel="stylesheet" href="Styles1.css">
 </head>
@@ -11,7 +12,7 @@
 <main class="main">
     <header>
         <div class="wrapper">
-            <img id="logo" src="logo-white2.png" alt="Logo: ME AN">
+            <img id="logo" src="logo-white2.webp" alt="Logo: ME AN" height="150" width="150">
             <nav>
                 <ul>
                     <li><a href="DresscodeHOME.html" target="_blank">Home</a></li>
@@ -25,7 +26,7 @@
         <div class="home-content">
             <h1>DRESS CODE:</h1>
             <h2>metaGLAM</h2>
-            <img src="img.png" height="700" alt="An image of model staring your eyes">
+            <img src="img.webp" height="700" width="1304" alt="An image of model staring your eyes">
             <p class="intro">Discover the Future of Fashion in the Metaverse!</p>
             <p>Are you ready to embrace the hottest trend in fashion? The metaverse is where high-tech meets high style,
                 and it's waiting for YOU to join the revolution!
